--- a/pages/15529.html
+++ b/pages/15529.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      empty 112 in nLab
+      lex total category in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      empty 112
+      lex total category
   </h1>
 
 
@@ -308,26 +308,246 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p><div class='property'> category: <a class='category_link' href='/nlab/list/empty'>empty</a></div></p>
+    <p>
+</p>
+
+<div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='category_theory'>Category theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a></strong></p>
+
+<h2 id='concepts'>Concepts</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category'>category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/natural+transformation'>natural transformation</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a></p>
+</li>
+</ul>
+
+<h2 id='universal_constructions'>Universal constructions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/universal+construction'>universal construction</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/representable+functor'>representable functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor'>adjoint functor</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/limit'>limit</a>/<a class='existingWikiWord' href='/nlab/show/colimit'>colimit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/weighted+limit'>weighted limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/end'>end</a>/<a class='existingWikiWord' href='/nlab/show/end'>coend</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kan+extension'>Kan extension</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<h2 id='theorems'>Theorems</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Yoneda+lemma'>Yoneda lemma</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Grothendieck+construction'>Grothendieck construction</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+functor+theorem'>adjoint functor theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/monadicity+theorem'>monadicity theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adjoint+lifting+theorem'>adjoint lifting theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Tannaka+duality'>Tannaka duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gabriel-Ulmer+duality'>Gabriel-Ulmer duality</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/small+object+argument'>small object argument</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freyd-Mitchell+embedding+theorem'>Freyd-Mitchell embedding theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between type theory and category theory</a></p>
+</li>
+</ul>
+
+<h2 id='extensions'>Extensions</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf and topos theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/enriched+category+theory'>enriched category theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+category+theory'>higher category theory</a></p>
+</li>
+</ul>
+
+<h2 id='applications'>Applications</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/applications+of+%28higher%29+category+theory'>applications of (higher) category theory</a></li>
+</ul>
+<div>
+<p>
+  <a href='/nlab/edit/category+theory+-+contents'>Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#examples'>Examples</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='idea'>Idea</h2>
+
+<blockquote>
+<p>It is the contention of Bob Walters and the author that lex-total categories are the good notion of topos. (<a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <a href='#Street81'>1981</a> p.201)</p>
+</blockquote>
+
+<p>A <strong>lex total category</strong> is a category whose <a class='existingWikiWord' href='/nlab/show/Yoneda+embedding'>Yoneda embedding</a> is a <a class='existingWikiWord' href='/nlab/show/localization'>localization</a> thereby generalizing <a class='existingWikiWord' href='/nlab/show/Giraud%27s+theorem'>Giraud&#39;s characterization</a> of <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck toposes</a> as localizations of a <a class='existingWikiWord' href='/nlab/show/category+of+presheaves'>presheaf topos</a> hence they can be viewed as a candidate for a notion of “topos”.</p>
+
+<h2 id='definition'>Definition</h2>
+
+<p>Recall that a locally small category <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is called <a class='existingWikiWord' href='/nlab/show/total+category'>total</a> if the <a class='existingWikiWord' href='/nlab/show/Yoneda+embedding'>Yoneda embedding</a> <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><mo>:</mo><mi>𝒞</mi><mo>↪</mo><msup><mi>Set</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>Y:\mathcal{C}\hookrightarrow Set^{\mathcal{C}^{op}}</annotation></semantics></math> has a left adjoint <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math>.</p>
+
+<div class='num_defn'>
+<h6 id='definition_2'>Definition</h6>
+
+<p>A locally small category <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> is called <em>lex total</em> if the <a class='existingWikiWord' href='/nlab/show/Yoneda+embedding'>Yoneda embedding</a> <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Y</mi><mo>:</mo><mi>𝒞</mi><mo>↪</mo><msup><mi>Set</mi> <mrow><msup><mi>𝒞</mi> <mi>op</mi></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>Y:\mathcal{C}\hookrightarrow Set^{\mathcal{C}^{op}}</annotation></semantics></math> has a <a class='existingWikiWord' href='/nlab/show/exact+functor'>left exact</a> (=finite limit preserving) left adjoint <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math>.</p>
+</div>
+
+<h2 id='examples'>Examples</h2>
+
+<p>In particular, <a class='existingWikiWord' href='/nlab/show/totally+distributive+category'>totally distributive categories</a> where <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi></mrow><annotation encoding='application/x-tex'>L</annotation></semantics></math> has a further left adjoint <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> are lex total.</p>
+
+<p>Below we will see that all <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck toposes</a> are lex total.</p>
+
+<h2 id='properties'>Properties</h2>
+
+<div class='num_prop'>
+<h6 id='theorem'>Theorem</h6>
+
+<p>A lex total category <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> iff <math class='maruku-mathml' display='inline' id='mathml_d29ef9805d5981058029f51498d92a897a5d7bd0_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> has a small set of <a class='existingWikiWord' href='/nlab/show/generator'>generators</a>.</p>
+</div>
+
+<p>The result was announced by Walters on the <a class='existingWikiWord' href='/nlab/show/Isle+of+Thorns'>Isle of Thorns</a> in 1976, a proof can be found in Street (<a href='#Street81'>1981</a>, p.206). More detailed information on this characterization in particular concerning the size issues involved and the algebraic perspective it avails can be found at <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos#Streetcharacterization'>Grothendieck topos</a>.</p>
+
+<h2 id='related_entries'>Related entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/total+category'>total category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/totally+distributive+category'>totally distributive category</a></p>
+</li>
+</ul>
+
+<h2 id='references'>References</h2>
+
+<ul>
+<li id='LW11'>
+<p><a class='existingWikiWord' href='/nlab/show/Rory+Lucyshyn-Wright'>Rory Lucyshyn-Wright</a>, <em>Totally distributive toposes</em> , arXiv:1108.4032 (2011). (<a href='https://arxiv.org/abs/1108.4032'>abstract</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>The family approach to total cocompleteness and toposes</em> , Trans. A. M. S. <strong>284</strong> (1978) pp.355-369.</p>
+</li>
+
+<li id='Street81'>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>R. Street</a>, <em>Notions of topos</em> , Bull. Austral. Math. Soc. <strong>23</strong> no.2 (1981) pp.199-208.</p>
+</li>
+
+<li id='SW78'>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>R. Street</a>, <a class='existingWikiWord' href='/nlab/show/Bob+Walters'>R. Walters</a>, <em>Yoneda structures on 2-category</em> , JA <strong>50</strong> no.2 (1978) pp.350-379.</p>
+</li>
+
+<li>
+<p>R.J. Wood, <em>Some remarks on total categories</em> , JA <strong>75</strong> no.2 (1982) pp.538-545.</p>
+</li>
+</ul>
+
+<p>
+ 
+ 
+ 
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on August 21, 2015 14:00:02 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (64.89.58.198)
+  Revised on March 19, 2018 11:59:59 
+  by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
+  (89.204.130.51)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/empty+112" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/empty+112/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/empty+112" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/empty+112" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lex+total+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lex+total+category/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/lex+total+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lex+total+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/empty+112" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/lex+total+category" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/empty+112" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/lex+total+category" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/empty+112" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/lex+total+category" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
