--- a/pages/15519.html
+++ b/pages/15519.html
@@ -640,7 +640,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
+<h4 id='topos_theory_2'><math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Topos Theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos+theory'>(∞,1)-topos theory</a></strong></p>
@@ -985,17 +985,17 @@ margin-left: 0em;
 <div class='num_defn'>
 <h6 id='definition_2'>Definition</h6>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/Grothendieck+topos'>Grothendieck topos</a> <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is called <em>injective</em> (with respect to subtopos inclusions) in the <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> of Grothendieck toposes <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> if for every inclusion <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>i</mi><mo>:</mo><mi>ℱ</mi><mo>↪</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>i:\mathcal{F}\hookrightarrow\mathcal{G}</annotation></semantics></math> and 1-cell <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>ℱ</mi><mo>→</mo><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>f:\mathcal{F}\to\mathcal{E}</annotation></semantics></math> there exists a 1-cell <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>:</mo><mi>ℰ</mi><mo>→</mo><mi>𝒢</mi></mrow><annotation encoding='application/x-tex'>g:\mathcal{E}\to\mathcal{G}</annotation></semantics></math> and a 2-isomorphism <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>∘</mo><mi>i</mi><mo>≅</mo><mi>f</mi></mrow><annotation encoding='application/x-tex'>g\circ i\cong f</annotation></semantics></math> .</p>
 </div>
 
 <h2 id='properties'>Properties</h2>
 
-<p>The main characterization of injective toposes is achieved by the folowing result due to Johnstone-Joyal (<a href='#JJ82'>1982</a>).</p>
+<p>The main characterization of injective toposes is achieved by the following result due to Johnstone-Joyal (<a href='#JJ82'>1982</a>).</p>
 
 <div class='num_prop'>
 <h6 id='theorem'>Theorem</h6>
 
-<p>There is an equivalence of 2-categories between the full sub-2-category of <math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> with 0-cells the injective toposes and the 2-category of cocomplete ind-small <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous categories</a> with 1-cells the filtered colimit preserving functors. This equivalence sends an injective topos to its <a class='existingWikiWord' href='/nlab/show/fibration+of+points'>category of points</a>.</p>
+<p>There is an equivalence of 2-categories between the full sub-2-category of <math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>GrTop</mi></mrow><annotation encoding='application/x-tex'>GrTop</annotation></semantics></math> with 0-cells the injective toposes and the 2-category of cocomplete ind-small <a class='existingWikiWord' href='/nlab/show/continuous+category'>continuous categories</a> with 1-cells the filtered colimit preserving functors. This equivalence sends an injective topos to its <a class='existingWikiWord' href='/nlab/show/fibration+of+points'>category of points</a>.</p>
 </div>
 
 <p>Note, that this gives also a characterization of the continuous categories involved as category of points of injective toposes.</p>
@@ -1011,7 +1011,7 @@ margin-left: 0em;
 <h2 id='example'>Example</h2>
 
 <ul>
-<li><math class='maruku-mathml' display='inline' id='mathml_65ceddfe8b42858287ebb6f5795535f2a796e321_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
+<li><math class='maruku-mathml' display='inline' id='mathml_2b0057536ef09e4c2e172df320738215a11f5be4_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Set</mi></mrow><annotation encoding='application/x-tex'>Set</annotation></semantics></math> is the only injective <a class='existingWikiWord' href='/nlab/show/Boolean+topos'>Boolean topos</a> (cf <a href='#JT02'>Johnstone 2002</a>, p.740).</li>
 </ul>
 
 <h2 id='related_entries'>Related entries</h2>
@@ -1060,14 +1060,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 19, 2018 09:01:03 
+  Revised on March 19, 2018 17:47:09 
   by <a class="existingWikiWord" href="/nlab/show/Thomas+Holder">Thomas Holder</a>
-  (82.113.121.98)
+  (89.204.135.103)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/injective+topos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/injective+topos/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/injective+topos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/injective+topos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
