--- a/pages/5736.html
+++ b/pages/5736.html
@@ -331,21 +331,20 @@ margin-left: 0em;
 <p>
  
  
-</p>
-
-<p>
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on April 29, 2016 10:31:28 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.220.184.222)
+  Revised on March 21, 2018 13:44:28 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.30.235.201)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/John+Frederick+Jardine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+Frederick+Jardine/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/John+Frederick+Jardine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+Frederick+Jardine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/John+Frederick+Jardine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+Frederick+Jardine/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/John+Frederick+Jardine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+Frederick+Jardine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
