--- a/pages/5972.html
+++ b/pages/5972.html
@@ -428,7 +428,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Madhav Nori, TIFR notes on motives, unpublished, <a href='http://www.arithgeo.ethz.ch/alpbach2011/Nori_TIFR'>pdf</a></p>
+<p>Madhav Nori, TIFR notes on motives, unpublished, <a href='http://www.arithgeo.ethz.ch/alpbach2011/Nori_TIFR'>pdf</a> <em>link broken</em></p>
 </li>
 
 <li>
@@ -497,14 +497,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 15, 2016 22:51:19 
-  by <span class="newWikiWord">Mattcarmona<a href="/nlab/new/Mattcarmona">?</a></span>
-  (190.9.213.221)
+  Revised on March 21, 2018 13:53:53 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (81.154.112.224)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nori+motive" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nori+motive/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/Nori+motive" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nori+motive" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Nori+motive" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nori+motive/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/Nori+motive" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nori+motive" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
