--- a/pages/5736.html
+++ b/pages/5736.html
@@ -311,7 +311,7 @@ margin-left: 0em;
     <p>John Frederick Jardine or Rick Jardine is a <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theorist</a> at the University of Western Ontario in London, Canada. His work on <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a> structures <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>on simplicial presheaves</a> is fundamental in the subject. His web pages have much course material in <a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/sheaf+and+topos+theory'>sheaf theory</a> and related subjects.</p>
 
 <ul>
-<li><a href='http://www.math.uwo.ca/~jardine'>webpage</a></li>
+<li><a href='http://uwo.ca/math/faculty/jardine/'>webpage</a></li>
 </ul>
 
 <h2 id='books'>Books</h2>
@@ -337,14 +337,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 21, 2018 13:44:28 
+  Revised on March 21, 2018 15:17:58 
   by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
   (2.30.235.201)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/John+Frederick+Jardine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+Frederick+Jardine/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/John+Frederick+Jardine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+Frederick+Jardine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/John+Frederick+Jardine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/John+Frederick+Jardine/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/John+Frederick+Jardine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/John+Frederick+Jardine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
