--- a/pages/5442.html
+++ b/pages/5442.html
@@ -311,7 +311,7 @@ margin-left: 0em;
     <p>The document</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Aise+Johan+de+Jong'>Aise Johan de Jong</a>, <em>The Stacks Project</em> collaborative textbook project, <math class='maruku-mathml' display='inline' id='mathml_6c6bf47565809b36f27e15cfd2bd46ba476bddfe_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>&gt;</mo><mn>4000</mn></mrow><annotation encoding='application/x-tex'>\gt 4000</annotation></semantics></math> pages (<a href='http://www.math.columbia.edu/algebraic_geometry/stacks-git/book.pdf'>pdf</a>) (<a href='http://www.math.columbia.edu/algebraic_geometry/stacks-git/'>project website</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Aise+Johan+de+Jong'>Aise Johan de Jong</a>, <em>The Stacks Project</em> collaborative textbook project, <math class='maruku-mathml' display='inline' id='mathml_b2dfa39435fff567cecaa3acd52a304d7e9468a7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>&gt;</mo><mn>6000</mn></mrow><annotation encoding='application/x-tex'>\gt 6000</annotation></semantics></math> pages (<a href='http://www.math.columbia.edu/algebraic_geometry/stacks-git/book.pdf'>pdf</a>) (<a href='http://www.math.columbia.edu/algebraic_geometry/stacks-git/'>project website</a>)</li>
 </ul>
 
 <p>is a textbook that leads from basics of <a class='existingWikiWord' href='/nlab/show/category+theory'>category theory</a> and <a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> to a discussion of <a class='existingWikiWord' href='/nlab/show/scheme'>scheme</a>s, <a class='existingWikiWord' href='/nlab/show/algebraic+space'>algebraic space</a>s and <a class='existingWikiWord' href='/nlab/show/algebraic+stack'>algebraic stack</a>s.</p>
@@ -324,14 +324,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 10, 2014 05:57:34 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.135.153)
+  Revised on March 22, 2018 03:30:17 
+  by <span class="newWikiWord">Hieronymous Coward<a href="/nlab/new/HieronymousCoward">?</a></span>
+  (146.232.74.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/The+Stacks+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+Stacks+Project/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/The+Stacks+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+Stacks+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/The+Stacks+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+Stacks+Project/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/The+Stacks+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+Stacks+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
