--- a/pages/547.html
+++ b/pages/547.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -452,17 +452,17 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#relation_to_local_smallness'>Relation to local smallness</a></li></ul></li><li><a href='#examples'>Examples</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>well-powered</strong> if every object has a <a class='existingWikiWord' href='/nlab/show/small+category'>small</a> <a class='existingWikiWord' href='/nlab/show/partial+order'>poset</a> of <a class='existingWikiWord' href='/nlab/show/subobject'>subobject</a>s.</p>
+<p>A <a class='existingWikiWord' href='/nlab/show/category'>category</a> <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>well-powered</strong> if every object has a <a class='existingWikiWord' href='/nlab/show/small+category'>small</a> <a class='existingWikiWord' href='/nlab/show/partial+order'>poset</a> of <a class='existingWikiWord' href='/nlab/show/subobject'>subobject</a>s.</p>
 
-<p>Assuming that by ‘subobject’ we mean (an <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> of) <a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphisms</a>, this means that for every object <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, the (generally <a class='existingWikiWord' href='/nlab/show/large+category'>large</a>) <a class='existingWikiWord' href='/nlab/show/preorder'>preorder</a>ed set of monomorphisms with codomain <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is equivalent to a small poset, or equivalently that this preordered set is essentially small. Variations exist that use notions of subobject other than monomorphisms.</p>
+<p>Assuming that by ‘subobject’ we mean (an <a class='existingWikiWord' href='/nlab/show/equivalence+class'>equivalence class</a> of) <a class='existingWikiWord' href='/nlab/show/monomorphism'>monomorphisms</a>, this means that for every object <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>, the (generally <a class='existingWikiWord' href='/nlab/show/large+category'>large</a>) <a class='existingWikiWord' href='/nlab/show/preorder'>preorder</a>ed set of monomorphisms with codomain <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is equivalent to a small poset, or equivalently that this preordered set is essentially small. Variations exist that use notions of subobject other than monomorphisms.</p>
 
-<p>If <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>C^{op}</annotation></semantics></math> is well-powered, we say that <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>well-copowered</strong> (although “cowell-powered” is also common).</p>
+<p>If <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>op</mi></msup></mrow><annotation encoding='application/x-tex'>C^{op}</annotation></semantics></math> is well-powered, we say that <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> is <strong>well-copowered</strong> (although “cowell-powered” is also common).</p>
 
 <h2 id='properties'>Properties</h2>
 
 <h3 id='relation_to_local_smallness'>Relation to local smallness</h3>
 
-<p>A well-powered category with binary <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> is always <a class='existingWikiWord' href='/nlab/show/locally+small+category'>locally small</a>, since morphisms <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>f: A \to B</annotation></semantics></math> can be identified with particular subobjects of <math class='maruku-mathml' display='inline' id='mathml_948a2d144f487a5cfd3732987eeafd23bd09ec31_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>×</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \times B</annotation></semantics></math> (their <a class='existingWikiWord' href='/nlab/show/graph+of+a+function'>graph</a>s).</p>
+<p>A well-powered category with binary <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a> is always <a class='existingWikiWord' href='/nlab/show/locally+small+category'>locally small</a>, since morphisms <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>f: A \to B</annotation></semantics></math> can be identified with particular subobjects of <math class='maruku-mathml' display='inline' id='mathml_782ab5937c77f2afd61faa2afe938afb3ea0757f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>×</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>A \times B</annotation></semantics></math> (their <a class='existingWikiWord' href='/nlab/show/graph+of+a+function'>graph</a>s).</p>
 
 <p>Conversely, any locally small category with a <a class='existingWikiWord' href='/nlab/show/subobject+classifier'>subobject classifier</a> must obviously be well-powered. In particular, a <a class='existingWikiWord' href='/nlab/show/topos'>topos</a> is locally small if and only if it is well-powered.</p>
 
@@ -475,18 +475,20 @@ margin-left: 0em;
 </ul>
 
 <p>
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November 26, 2016 03:02:25 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (70.36.136.64)
+  Revised on March 22, 2018 12:17:12 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/well-powered+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/well-powered+category/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/well-powered+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/well-powered+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/well-powered+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/well-powered+category/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/well-powered+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/well-powered+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
