--- a/pages/16524.html
+++ b/pages/16524.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Vincent Schlegel in nLab
+      Vincent Braunack-Mayer in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Vincent Schlegel
+      Vincent Braunack-Mayer
   </h1>
 
 
@@ -308,17 +308,24 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
+    <p>
+</p>
+
+<blockquote>
+<p>(formerly V. Schlegel)</p>
+</blockquote>
+
+<ul>
 <li><a href='http://www.math.uzh.ch/index.php?assistenten&amp;key1=9218'>webpage</a></li>
 </ul>
 
 <h2 id='thesis'>thesis</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/schreiber/show/thesis+Schlegel' title='schreiber'>thesis Schlegel</a></li>
+<li><a class='existingWikiWord' href='/schreiber/show/thesis+Braunack-Mayer' title='schreiber'>thesis Braunack-Mayer</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_867090acb31f421667e01178af64c3dedf4f21df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_77ac6f4b654849b3a10ee0ee74cc42405acb6c58_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/rational+parameterized+stable+homotopy+theory'>rational parameterized stable homotopy theory</a></li>
@@ -328,22 +335,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  4, 2018 06:54:05 
+  Revised on March 23, 2018 06:48:48 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.53.179)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Vincent+Schlegel" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vincent+Schlegel/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Vincent+Schlegel" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vincent+Schlegel" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Vincent+Braunack-Mayer" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vincent+Braunack-Mayer/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Vincent+Braunack-Mayer" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vincent+Braunack-Mayer" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Vincent+Schlegel" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Vincent+Braunack-Mayer" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Vincent+Schlegel" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Vincent+Braunack-Mayer" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Vincent+Schlegel" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Vincent+Braunack-Mayer" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
