--- a/pages/9880.html
+++ b/pages/9880.html
@@ -377,7 +377,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Reshetikhin-Turaev+construction'>Reshetikhin–Turaev model</a> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
+<p><span class='newWikiWord'>Reshetikhin?Turaev model<a href='/nlab/new/Reshetikhin%3FTuraev+model'>?</a></span> / <a class='existingWikiWord' href='/nlab/show/Chern-Simons+theory'>Chern-Simons theory</a></p>
 </li>
 
 <li>
@@ -447,13 +447,13 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#confinement_and_the_mass_gap'>Confinement and the mass gap</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#in_field_theory'>In field theory</a></li><li><a href='#in_string_theory'>In string theory</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#confinement_and_the_mass_gap'>Confinement and the mass gap</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#in_field_theory'>In field theory</a></li><li><a href='#in_string_theory'>In string theory</a></li><li><a href='#in_mtheory'>In M-Theory</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>An effect in <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>non-perturbative quantum field theory</a> that cannot be seen in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> is called a <em>non-perturbative effect</em>.</p>
 
-<p>More in detail, <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theories</a> with <a class='existingWikiWord' href='/nlab/show/instanton'>instantons</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> configurations (such as in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>, hence in <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> and <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a>) or <a class='existingWikiWord' href='/nlab/show/brane'>branes</a> (such as in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>), etc., are expected to have <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> which as <a class='existingWikiWord' href='/nlab/show/function'>functions</a> of the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> <math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/transseries'>transseries</a> of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi><mo stretchy='false'>(</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msub><mi>a</mi> <mi>n</mi></msub><msup><mi>g</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi></mrow></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msubsup><mi>a</mi> <mi>n</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msubsup><msup><mi>g</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>B</mi><mo stretchy='false'>/</mo><msup><mi>g</mi> <mn>2</mn></msup></mrow></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msubsup><mi>b</mi> <mi>n</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msubsup><msup><mi>g</mi> <mi>n</mi></msup><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<p>More in detail, <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>theories</a> with <a class='existingWikiWord' href='/nlab/show/instanton'>instantons</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> configurations (such as in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>, hence in <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> and <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a>) or <a class='existingWikiWord' href='/nlab/show/brane'>branes</a> (such as in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a>), etc., are expected to have <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> which as <a class='existingWikiWord' href='/nlab/show/function'>functions</a> of the <a class='existingWikiWord' href='/nlab/show/coupling+constant'>coupling constant</a> <math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/transseries'>transseries</a> of the form</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi><mo stretchy='false'>(</mo><mi>g</mi><mo stretchy='false'>)</mo><mo>=</mo><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msub><mi>a</mi> <mi>n</mi></msub><msup><mi>g</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi></mrow></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msubsup><mi>a</mi> <mi>n</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msubsup><msup><mi>g</mi> <mi>n</mi></msup><mo>+</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>B</mi><mo stretchy='false'>/</mo><msup><mi>g</mi> <mn>2</mn></msup></mrow></msup><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mi>n</mi></munder><msubsup><mi>b</mi> <mi>n</mi> <mrow><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow></msubsup><msup><mi>g</mi> <mi>n</mi></msup><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   Z(g)
   = 
   \sum_n a_n g^n
@@ -466,7 +466,7 @@ margin-left: 0em;
   \,,
 
 </annotation></semantics></math></div>
-<p>where the first sum is the <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> itself and where the terms with a <a class='existingWikiWord' href='/nlab/show/analytic+function'>non-analytic</a> dependence of the form <math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(-A/g)</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(-A/g)</annotation></semantics></math> are the contributions of the <a class='existingWikiWord' href='/nlab/show/instanton'>instantons</a>. Since all the <a class='existingWikiWord' href='/nlab/show/derivative'>derivatives</a> of the functions <math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>/</mo><mi>g</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>g \mapsto e^{-1/g}</annotation></semantics></math> or $<math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>/</mo><msup><mi>g</mi> <mn>2</mn></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>g \mapsto e^{-1/g^2}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>vanish</mi><mi>at</mi><mo stretchy='false'>[</mo><mo stretchy='false'>[</mo><mi>coupling</mi><mi>constant</mi><mo stretchy='false'>]</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'> vanish at [[coupling constant]] </annotation></semantics></math>g = 0$, the <a class='existingWikiWord' href='/nlab/show/Taylor+series'>Taylor series</a> of this part of the observble does not appear in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a>, even though it is present. Therefore this is called a <em>non-perturbative effect</em>.</p>
+<p>where the first sum is the <a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a> itself and where the terms with a <a class='existingWikiWord' href='/nlab/show/analytic+function'>non-analytic</a> dependence of the form <math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(-A/g)</annotation></semantics></math> or <math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>A</mi><mo stretchy='false'>/</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(-A/g)</annotation></semantics></math> are the contributions of the <a class='existingWikiWord' href='/nlab/show/instanton'>instantons</a>. Since all the <a class='existingWikiWord' href='/nlab/show/derivative'>derivatives</a> of the functions <math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>/</mo><mi>g</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>g \mapsto e^{-1/g}</annotation></semantics></math> or $<math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo>↦</mo><msup><mi>e</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>/</mo><msup><mi>g</mi> <mn>2</mn></msup></mrow></msup></mrow><annotation encoding='application/x-tex'>g \mapsto e^{-1/g^2}</annotation></semantics></math><math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>vanish</mi><mi>at</mi><mo stretchy='false'>[</mo><mo stretchy='false'>[</mo><mi>coupling</mi><mi>constant</mi><mo stretchy='false'>]</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'> vanish at [[coupling constant]] </annotation></semantics></math>g = 0$, the <a class='existingWikiWord' href='/nlab/show/Taylor+series'>Taylor series</a> of this part of the observble does not appear in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative QFT</a>, even though it is present. Therefore this is called a <em>non-perturbative effect</em>.</p>
 
 <p>Related is <em><a class='existingWikiWord' href='/nlab/show/resurgence+theory'>resurgence theory</a></em>. See also at <em><a href='perturbation+theory#DivergenceConvergence'>perturbation theory – Divergence/convergence</a></em> for more.</p>
 
@@ -515,13 +515,19 @@ margin-left: 0em;
 <p>Discussion of non-perturbative effects in <a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> are in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Mariño</a>, <em>Instantons and Large <math class='maruku-mathml' display='inline' id='mathml_0bb49ef719aec692fd0893197d7ce1c3a69ce574_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> – An introduction to non-perturbative methods in QFT</em> (<a href='http://laces.web.cern.ch/laces/LACES10/notes/instlargen.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Mariño</a>, <em>Instantons and Large <math class='maruku-mathml' display='inline' id='mathml_0e2c29ddbf598721deb9181d93fe8def63f0d5a6_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi></mrow><annotation encoding='application/x-tex'>N</annotation></semantics></math> – An introduction to non-perturbative methods in QFT</em> (<a href='http://laces.web.cern.ch/laces/LACES10/notes/instlargen.pdf'>pdf</a>)</li>
 </ul>
 
 <p>and in (<a class='existingWikiWord' href='/nlab/show/super+Yang-Mills+theory'>super</a>-)<a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> and <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> is in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Mariño</a>, <em>Lectures on non-perturbative effects in large N gauge theories, matrix models and strings</em> (<a href='http://arxiv.org/abs/1206.6272'>arXiv:1206.6272</a>)</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Mariño</a>, <em>Lectures on non-perturbative effects in large N gauge theories, matrix models and strings</em> (<a href='http://arxiv.org/abs/1206.6272'>arXiv:1206.6272</a>)</p>
+</li>
+
+<li id='Marino15'>
+<p><a class='existingWikiWord' href='/nlab/show/Marcos+Mari%C3%B1o'>Marcos Mariño</a>, <em>Non-perturbative effects in string theory and AdS/CFT</em>, <a href='http://indico.ictp.it/event/a14251/'>Spring School on Superstring Theory and Related Topics 2015</a> (<a class='existingWikiWord' href='/nlab/files/MarinoNonPerturbative.pdf' title='pdf'>pdf</a>, <a href='http://indico.ictp.it/event/a14251/session/89/contribution/401/material/0/0.pdf'>pdf</a>)</p>
+</li>
 </ul>
 
 <h3 id='in_string_theory'>In string theory</h3>
@@ -541,14 +547,24 @@ margin-left: 0em;
 <p>The identification of non-perturbative contributions in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> with brane contributions is due to</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Katrin+Becker'>Katrin Becker</a>, <a class='existingWikiWord' href='/nlab/show/Melanie+Becker'>Melanie Becker</a>, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Five-branes, membranes and nonperturbative string theory</em>, Nucl. Phys. B 456, 130 (1995) (<a href='http://arxiv.org/abs/hep-th/9507158'>hep-th/9507158</a>)</li>
+<li id='BeckerBeckerStrominger95'><a class='existingWikiWord' href='/nlab/show/Katrin+Becker'>Katrin Becker</a>, <a class='existingWikiWord' href='/nlab/show/Melanie+Becker'>Melanie Becker</a>, <a class='existingWikiWord' href='/nlab/show/Andrew+Strominger'>Andrew Strominger</a>, <em>Five-branes, membranes and nonperturbative string theory</em>, Nucl. Phys. B 456, 130 (1995) (<a href='http://arxiv.org/abs/hep-th/9507158'>hep-th/9507158</a>)</li>
 </ul>
 
-<p>A review specifically in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> is in</p>
+<p>Reviews specifically in <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type II string theory</a> include</p>
 
 <ul>
-<li>Hugo Looyestijn, <em>Non-perturbative effects in type IIA string theory</em>, Master Thesis 2006 (<a href='http://testweb.science.uu.nl/ITF/teaching/2006/Looyestijn.pdf'>pdf</a>)</li>
+<li>
+<p>Hugo Looyestijn, <em>Non-perturbative effects in type IIA string theory</em>, Master Thesis 2006 (<a href='http://testweb.science.uu.nl/ITF/teaching/2006/Looyestijn.pdf'>pdf</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, <em>Non-perturbative effects and D-brane instanton resummation in string theory</em> (<a class='existingWikiWord' href='/nlab/files/UrangaNonPerturbativeBrane.pdf' title='pdf'>pdf</a>, <a href='https://indico.cern.ch/event/75810/contributions/1250733/attachments/1050849/1498253/uranga.pdf'>pdf</a>)</p>
+</li>
 </ul>
+
+<h3 id='in_mtheory'>In M-Theory</h3>
+
+<p>In <a href='#BeckerBeckerStrominger95'>Becker-Becker-Strominger 95</a> it was realized that the <span class='newWikiWord'>worldsheet instantons<a href='/nlab/new/worldsheet+instantons'>?</a></span> and <span class='newWikiWord'>D-brane instantons<a href='/nlab/new/D-brane+instantons'>?</a></span> of string theory unify to <a class='existingWikiWord' href='/nlab/show/membrane+instanton'>membrane instantons</a> (see <a href='#Marino15'>Marino 15, section 1.3</a>)</p>
 
 <p>
  
@@ -560,14 +576,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 10, 2018 14:59:12 
+  Revised on March 23, 2018 09:47:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.229.110.1)
+  (91.230.41.202)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
