--- a/pages/19078.html
+++ b/pages/19078.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Closed Immersions in nLab
+      morphism of schemes in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Closed Immersions
+      morphism of schemes
   </h1>
 
 
@@ -308,44 +308,61 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>This page collects links related to the article</p>
+    <h2 id='definition'>Definition</h2>
+
+<p>If <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>X</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\mathcal{O}_X)</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>Y</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>Y</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(Y,\mathcal{O}_Y)</annotation></semantics></math> a <strong>morphism of schemes</strong> <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>X</mi></msub><mo stretchy='false'>)</mo><mo>→</mo><mo stretchy='false'>(</mo><mi>Y</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>Y</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\mathcal{O}_X)\to(Y,\mathcal{O}_Y)</annotation></semantics></math> is a pair <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>f</mi><mo>,</mo><msup><mi>f</mi> <mo>♯</mo></msup><mo stretchy='false'>)</mo><mo>:</mo><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>X</mi></msub><mo stretchy='false'>)</mo><mo>→</mo><mo stretchy='false'>(</mo><mi>Y</mi><mo>,</mo><msub><mi>𝒪</mi> <mi>Y</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(f,f^\sharp):(X,\mathcal{O}_X)\to(Y,\mathcal{O}_Y)</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>Y</mi></mrow><annotation encoding='application/x-tex'>f:X\to Y</annotation></semantics></math> is the continuous map of topological spaces and a morphism of sheaves of local rings <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mo>♯</mo></msup><mo>:</mo><msub><mi>𝒪</mi> <mi>Y</mi></msub><mo>→</mo><msub><mi>f</mi> <mo>*</mo></msub><msub><mi>𝒪</mi> <mi>X</mi></msub></mrow><annotation encoding='application/x-tex'>f^\sharp:\mathcal{O}_Y\to f_*\mathcal{O}_X</annotation></semantics></math>.</p>
+
+<p>In other words, schemes form a full subcategory of the category of <a class='existingWikiWord' href='/nlab/show/locally+ringed+topological+space'>locally ringed space</a>s. The morphism of sheaves of local rings <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>f</mi> <mo>♯</mo></msup><mo>:</mo><msub><mi>𝒪</mi> <mi>Y</mi></msub><mo>→</mo><msub><mi>f</mi> <mo>*</mo></msub><msub><mi>𝒪</mi> <mi>X</mi></msub></mrow><annotation encoding='application/x-tex'>f^\sharp:\mathcal{O}_Y\to f_*\mathcal{O}_X</annotation></semantics></math> is also called the <a class='existingWikiWord' href='/nlab/show/comorphism'>comorphism</a>.</p>
+
+<h2 id='properties_of_morphisms'>Properties of morphisms</h2>
+
+<p>Since Grothendieck school, the relative point of view is emphasized in algebraic geometry. In particular, the study of classes of schemes is generalized to the study of classes of morphisms of schemes. Thus a property of some schemes can often be generalized to a property of some morphisms and this is the proper generality. For example, the affine <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>-schemes are the same as affine morphisms into the spectrum of <math class='maruku-mathml' display='inline' id='mathml_869c32aaf72205ae3a312c983d067bccf3eae7c8_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math>; thus affine morphisms (otherwise known as relative affine schemes) generalize affine schemes.</p>
+
+<p>Much of the foundations of modern algebraic geometry is thus devoted to the study of classes of morphisms of schemes, as seen for example from major monographs like EGA, or the recent Stacks Project.</p>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Jacob+Lurie'>Jacob Lurie</a></p>
+<li><a class='existingWikiWord' href='/nlab/show/affine+morphism'>affine morphism</a></li>
 
-<p><em>Closed Immersions</em></p>
+<li><a class='existingWikiWord' href='/nlab/show/flat+morphism'>flat morphism</a>, <a class='existingWikiWord' href='/nlab/show/flat+morphism'>faithfully flat morphism</a></li>
 
-<p>(<a href='http://www.math.harvard.edu/~lurie/papers/DAG-IX.pdf'>pdf</a>)</p>
-</li>
+<li><a class='existingWikiWord' href='/nlab/show/closed+immersion+of+schemes'>closed immersion of schemes</a>, <a class='existingWikiWord' href='/nlab/show/open+immersion+of+schemes'>open immersion of schemes</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/injective+or+projective+morphism'>projective morphism</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/proper+morphism'>proper morphism of schemes</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/quasicompact+morphism'>quasicompact morphism</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+map'>etale morphism</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/morphism+of+finite+presentation'>morphism of finite presentation</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/morphism+of+finite+type'>morphism of finite type</a></li>
+
+<li><a class='existingWikiWord' href='/nlab/show/separated+morphism'>separated morphism</a>, <a class='existingWikiWord' href='/nlab/show/quasi-separated+morphism'>quasiseparated morphism</a></li>
 </ul>
 
-<p>on the refinement of the notions of <em><a class='existingWikiWord' href='/nlab/show/closed+immersion+of+schemes'>closed immersion of schemes</a></em> and of <em><a class='existingWikiWord' href='/nlab/show/complex+analytic+space'>complex analytic space</a>s</em> from <a class='existingWikiWord' href='/nlab/show/geometry'>geometry</a>/<a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a> to <a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>/<a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a>, specifically to <a class='existingWikiWord' href='/nlab/show/E-%E2%88%9E+geometry'>E-∞ geometry</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/derived+complex+analytic+space'>derived complex analytic space</a></li>
-</ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/geometry'>geometry</a></div> 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on March 26, 2018 15:46:02 
+  Created on March 26, 2018 15:54:53 
   by <a class="existingWikiWord" href="/nlab/show/Zoran+%C5%A0koda">Zoran Škoda</a>
   (193.198.162.14)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Closed+Immersions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Closed+Immersions/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Closed+Immersions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Closed+Immersions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/morphism+of+schemes" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Closed+Immersions" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/morphism+of+schemes" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Closed+Immersions" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/morphism+of+schemes" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Closed+Immersions" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/morphism+of+schemes" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
